# claude-agent-skills-hub

./: .gitignore  README.md
mcp-servers/ai_llm/Upsonic/: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
mcp-servers/ai_llm/Upsonic/.github/workflows/: ci.yml  claude-code-review.yml  release.yml  sync-dev.yml  test_publisher.yml
mcp-servers/ai_llm/Upsonic/benchmarks/: .gitignore  Makefile  QUICKSTART.md  README.md  SETUP.md  __init__.py  utils.py
mcp-servers/ai_llm/Upsonic/benchmarks/overhead_analysis/: README.md  __init__.py  benchmark.py  test_cases.py
mcp-servers/ai_llm/Upsonic/benchmarks/overhead_analysis/results/: .gitkeep
mcp-servers/ai_llm/Upsonic/documents/ai/guides/: bug-fix.md  coding-standards.md  commit.md  feature.md  memory.md  new_prebuilt_agent_adding.md  refactor.md  serena.md  subagents.md  testing.md
mcp-servers/ai_llm/Upsonic/notebooks/: stock_report.ipynb
mcp-servers/ai_llm/Upsonic/prebuilt_autonomous_agents/applied_scientist/: first_message.md
mcp-servers/ai_llm/Upsonic/src/upsonic/: __init__.py  _griffe.py  _json_schema.py  _output.py  _parts_manager.py  _ssrf.py  _utils.py  direct.py  exceptions.py  usage.py
mcp-servers/ai_llm/Upsonic/src/upsonic/agent/: __init__.py  agent.py  events.py  otel_manager.py  policy_manager.py  tool_policy_manager.py
mcp-servers/ai_llm/Upsonic/src/upsonic/cache/: cache_manager.py
mcp-servers/ai_llm/Upsonic/src/upsonic/chat/: __init__.py  chat.py  cost_calculator.py  schemas.py  session_manager.py
mcp-servers/ai_llm/Upsonic/src/upsonic/culture/: manager.py
mcp-servers/ai_llm/Upsonic/src/upsonic/db/: database.py
mcp-servers/ai_llm/Upsonic/src/upsonic/embeddings/: base.py  gemini_provider.py
mcp-servers/ai_llm/Upsonic/src/upsonic/eval/: _pl_helpers.py  accuracy.py  performance.py  reliability.py
mcp-servers/ai_llm/Upsonic/src/upsonic/graph/: graph.py
mcp-servers/ai_llm/Upsonic/src/upsonic/graphv2/: state_graph.py
mcp-servers/ai_llm/Upsonic/src/upsonic/integrations/: __init__.py  asqav.py  langfuse.py  promptlayer.py  tracing.py
mcp-servers/ai_llm/Upsonic/src/upsonic/interfaces/: __init__.py  base.py  schemas.py
mcp-servers/ai_llm/Upsonic/src/upsonic/knowledge_base/: __init__.py  knowledge_base.py
mcp-servers/ai_llm/Upsonic/src/upsonic/loaders/: base.py  factory.py  pdf.py
mcp-servers/ai_llm/Upsonic/src/upsonic/messages/: _otel_messages.py  messages.py
mcp-servers/ai_llm/Upsonic/src/upsonic/models/: __init__.py  anthropic.py  azure.py  bedrock.py  cerebras.py  cohere.py  github.py  google.py  grok.py  groq.py  heroku.py  huggingface.py  instrumented.py  litellm.py  lmstudio.py  mistral.py  moonshotai.py  nvidia.py  ollama.py  openai.py  openrouter.py  outlines.py  ovhcloud.py  sambanova.py  settings.py  together.py  vercel.py  vllm.py  wrapper.py  xai.py
mcp-servers/ai_llm/Upsonic/src/upsonic/ocr/: __init__.py  base.py  exceptions.py  ocr.py  utils.py
mcp-servers/ai_llm/Upsonic/src/upsonic/prebuilt/: __init__.py  prebuilt_agent_base.py
mcp-servers/ai_llm/Upsonic/src/upsonic/profiles/: __init__.py  anthropic.py  google.py  grok.py  openai.py
mcp-servers/ai_llm/Upsonic/src/upsonic/providers/: __init__.py  anthropic.py  bedrock.py  cerebras.py  cohere.py  deepseek.py  gateway.py  google.py  grok.py  groq.py  huggingface.py  lmstudio.py  moonshotai.py  ollama.py  openrouter.py  outlines.py  sambanova.py  xai.py
mcp-servers/ai_llm/Upsonic/src/upsonic/reflection/: models.py  processor.py
mcp-servers/ai_llm/Upsonic/src/upsonic/reliability_layer/: reliability_layer.py
mcp-servers/ai_llm/Upsonic/src/upsonic/run/: requirements.py
mcp-servers/ai_llm/Upsonic/src/upsonic/safety_engine/: __init__.py  anonymization.py  models.py
mcp-servers/ai_llm/Upsonic/src/upsonic/schemas/: data_models.py
mcp-servers/ai_llm/Upsonic/src/upsonic/skills/: __init__.py  cache.py  dependency.py  metrics.py  skill.py  skills.py  utils.py  validator.py  version.py
mcp-servers/ai_llm/Upsonic/src/upsonic/storage/: __init__.py  base.py  schemas.py
mcp-servers/ai_llm/Upsonic/src/upsonic/tasks/: tasks.py
mcp-servers/ai_llm/Upsonic/src/upsonic/team/: context_sharing.py  coordinator_setup.py  delegation_manager.py  result_combiner.py  task_assignment.py  team.py
mcp-servers/ai_llm/Upsonic/src/upsonic/text_splitter/: base.py  factory.py
mcp-servers/ai_llm/Upsonic/src/upsonic/tools/: __init__.py  base.py  builtin_tools.py  config.py  execution.py  hitl.py  mcp.py  normalizer.py  orchestration.py  registry.py  user_input.py  wrappers.py
mcp-servers/ai_llm/Upsonic/src/upsonic/uel/: graph.py
mcp-servers/ai_llm/Upsonic/src/upsonic/usage_registry/: __init__.py  aggregated.py  entry.py  ids.py  recorder.py  registry.py  scope.py
mcp-servers/ai_llm/Upsonic/src/upsonic/utils/: __init__.py  async_utils.py  logging_config.py  pipeline.py  printing.py  retry.py  timer.py  tool_usage.py  usage.py
mcp-servers/ai_llm/Upsonic/src/upsonic/vectordb/: __init__.py  base.py  config.py  store.py
mcp-servers/ai_llm/Upsonic/tests/: _pipeline_injection.py  conftest.py
mcp-servers/ai_llm/Upsonic/tests/doc_examples/chat/: chat_error_handling_1.py  chat_error_handling_4.py  chat_examples_basic_chat_1.py  chat_examples_complex_chat_1.py  chat_examples_complex_chat_2.py  chat_memory_2.py  chat_memory_4.py  chat_metrics_1.py  chat_metrics_3.py  chat_metrics_4.py  chat_overview.py  creating_chat_1.py  creating_chat_2.py  creating_chat_3.py  creating_chat_4.py
mcp-servers/ai_llm/Upsonic/tests/smoke_tests/: DOCKER_SETUP.md  docker-compose.yml  test_smoke_agent.py  test_smoke_models.py
mcp-servers/ai_llm/Upsonic/tests/unit_tests/: test_agent_streaming.py  test_do.py  test_image_input.py  test_logging_config.py  test_memory.py  test_model_specification.py  test_partial_timeout.py  test_pipeline.py  test_telemetry_optin.py
mcp-servers/ai_llm/fastmcp/fastmcp_remote/: README.md  pyproject.toml
mcp-servers/ai_llm/fastmcp/fastmcp_remote/fastmcp_remote/: __init__.py  cli.py
(+3702 files in other folders)
